--- a/Views/Scorecard/EditTestResult.cshtml
+++ b/Views/Scorecard/EditTestResult.cshtml
@@ -13,6 +13,10 @@
         height: 100px;
         width: 100%;
     }
+
+    .status-dropdown {
+        width: 200px;
+    }
 </style>
 
 <h1>Edit Test Result</h1>
@@ -37,26 +41,11 @@
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => Model.Test.ExpectedResult)
             </dd>
-            <dt class="col-sm-2">
+            <dt class="col-sm-2" style="margin-top: 10px">
                 Status:
             </dt>
-            <dd class="col-sm-10">
-                @{
-                    var statusString = "";
-                    if (Model.Result.Passed == null)
-                    {
-                        statusString = "Not Started";
-                    }
-                    else if (Model.Result.Passed == true)
-                    {
-                        statusString = "Passed";
-                    }
-                    else if (Model.Result.Passed == false)
-                    {
-                        statusString = "Failed";
-                    }
-                }
-                @Html.DisplayFor(model => statusString)
+            <dd class="col-sm-10" style="margin-top: 10px">
+                @Html.DropDownListFor(model => Model.SelectedStatus, Model.StatusOptions, Model.SelectedStatus, new { @class = "status-dropdown" })
             </dd>
         </dl>
     </div>
@@ -70,7 +59,7 @@
     <br />
 
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-10">
             @Html.HiddenFor(model => Model.Result.ProgressID)
             @Html.HiddenFor(model => Model.Result.CategoryID)
             @Html.HiddenFor(model => Model.Result.TestID)
