Working on updating user roles
Added view for viewing all users and working on functionality for updating currently. ViewModel attributes need to be hidden as they're null on post.

--- a/Views/Scorecard/Results.cshtml
+++ b/Views/Scorecard/Results.cshtml
@@ -59,7 +59,7 @@
                     }
                     else
                     {
-                        @Html.ActionLink("Details", "ProgressDetails", "Scorecard", new { id = item.ID }, new { @class = "btn btn-sm btn-primary start-btn", @style = "float:right" })
+                        @Html.ActionLink("Details", "ProgressDetails", "Scorecard", new { id = item.ID }, new { @class = "btn btn-sm btn-primary action-btn", @style = "float:right" })
                     }
                 </td>
             </tr>
