--- a/Views/Admin/EditUser.cshtml
+++ b/Views/Admin/EditUser.cshtml
@@ -14,6 +14,18 @@
     }
 </style>
 
+<script>
+    var userID = '@Model.UserInfo.UserID';
+
+    function confirmDelete() {
+        var confirmed = confirm("Are you sure you want to delete this user?");
+        console.log(confirmed);
+        if (confirmed) {
+            window.location = "/Admin/DeleteUser/" + userID;
+        }
+    }
+</script>
+
 <h1>Edit User</h1>
 <hr />
 
@@ -45,8 +57,9 @@
                 </dd>
             </dl>
 
-            @Html.ActionLink("Delete", "DeleteUser", new { id = Model.UserInfo.UserID },
-                new { @class = "btn btn-sm btn-danger action-btn", @style = "float: left" })
+            <input type="button" value="Delete" onclick="confirmDelete()" class="btn btn-sm btn-danger action-btn" />
+            @*@Html.ActionLink("Delete", "DeleteUser", new { id = Model.UserInfo.UserID },
+                new { @class = "btn btn-sm btn-danger action-btn", @style = "float: left" })*@
             <input type="submit" value="Update" class="btn btn-sm btn-success action-btn" style="float: right" />
         </form>
     </div>
