--- a/Views/Admin/EditUser.cshtml
+++ b/Views/Admin/EditUser.cshtml
@@ -18,9 +18,7 @@
     var userID = '@Model.UserInfo.UserID';
 
     function confirmDelete() {
-        var confirmed = confirm("Are you sure you want to delete this user?");
-        console.log(confirmed);
-        if (confirmed) {
+        if (confirm("Are you sure you want to delete this user?")) {
             window.location = "/Admin/DeleteUser/" + userID;
         }
     }
@@ -58,8 +56,6 @@
             </dl>
 
             <input type="button" value="Delete" onclick="confirmDelete()" class="btn btn-sm btn-danger action-btn" />
-            @*@Html.ActionLink("Delete", "DeleteUser", new { id = Model.UserInfo.UserID },
-                new { @class = "btn btn-sm btn-danger action-btn", @style = "float: left" })*@
             <input type="submit" value="Update" class="btn btn-sm btn-success action-btn" style="float: right" />
         </form>
     </div>
