--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - Kody Kriner - kody.kriner@gmail.com
+            &copy; @DateTime.Now.Year - Pingman Tools
         </div>
     </footer>
 
