--- a/Views/Scorecard/ResultsDetails.cshtml
+++ b/Views/Scorecard/ResultsDetails.cshtml
@@ -22,6 +22,12 @@
             @Html.DisplayFor(model => model.Scorecard.Description)
         </dd>
         <dt class="col-sm-2">
+            Details:
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Results.ScorecardNotes)
+        </dd>
+        <dt class="col-sm-2">
             User:
         </dt>
         <dd class="col-sm-10">
