Refactor of progress display
moved tests out of tables and into their own divs with description, expected result, pass / fail options and details button to add notes without having to fail a test.

--- a/Views/Scorecard/EditTestResult.cshtml
+++ b/Views/Scorecard/EditTestResult.cshtml
@@ -51,7 +51,7 @@
     </div>
     <br />
     <div class="form-group">
-        @Html.ActionLink("Back to Progress", "Progress", new { id = Model.Result.ProgressID, categoryID = Model.Result.CategoryID },
+        @Html.ActionLink("Back to Progress", "Progress", new { id = Model.Result.ProgressID, testID = Model.Result.TestID },
             new { @class = "btn btn-secondary", @style = "float:left" })
     </div>
     <br />
