made pass / fail result label bold

--- a/Views/Scorecard/Progress.cshtml
+++ b/Views/Scorecard/Progress.cshtml
@@ -28,11 +28,13 @@
     .passed-label {
         color: green;
         font-style: italic;
+        font-weight: bold;
     }
 
     .failed-label {
         color: red;
         font-style: italic;
+        font-weight: bold;
     }
 </style>
 
