--- a/Views/Setup/EditScorecardTest.cshtml
+++ b/Views/Setup/EditScorecardTest.cshtml
@@ -36,6 +36,11 @@
                 <span asp-validation-for="Value" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Order" class="control-label"></label>
+                <input asp-for="Order" class="form-control" />
+                <span asp-validation-for="Order" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 @Html.ActionLink("Back", "ScorecardDetails", new { id = Model.ScorecardID },
                     new { @class = "btn btn-secondary btns", @style="float:left" })
                 <input type="submit" value="Save" class="btn btn-success btns" style="float:right"/>
