--- a/Views/Setup/ScorecardDetails.cshtml
+++ b/Views/Setup/ScorecardDetails.cshtml
@@ -39,7 +39,16 @@
     console.log("Scrolling to div " + scrollToDiv);
 
     window.location.hash = scrollToDiv;
+
+    var scorecardID = '@Model.Scorecard.ID';
+
+    function confirmDelete() {
+        if (confirm("Are you sure you want to delete this Scorecard?")) {
+            window.location = "/Setup/DeleteScorecard/" + scorecardID;
+        }
+    }
 </script>
+
 
 <h1>Scorecard Details</h1>
 <hr />
@@ -75,7 +84,7 @@
         </dd>
     </dl>
     <div>
-        @Html.ActionLink("Delete", "DeleteScorecard", new { id = Model.Scorecard.ID }, new { @class = "btn btn-danger btn-sm action-btn", @style = "float:left" })
+        <input type="button" value="Delete" onclick="confirmDelete()" class="btn btn-danger btn-sm action-btn" style="float:left" />
     </div>
     <div style="float:right">
         @Html.ActionLink("Edit Details", "EditScorecardDetails", new { id = Model.Scorecard.ID }, new { @class = "btn btn-secondary btn-sm action-btn" })
