--- a/Views/Setup/Index.cshtml
+++ b/Views/Setup/Index.cshtml
@@ -24,11 +24,14 @@
 
 <h1>Setup</h1>
 <hr />
-<div>
-    @Html.ActionLink("Import CSV", "ImportTests", new { }, new { @class = "btn btn-primary create-btn", @style = "float:right" })
+<div style="float:right">
+   @Html.ActionLink("Export App Data", "ExportAppData", new { }, new { @class = "btn btn-secondary", @style = "width: 150px" })
+   @Html.ActionLink("Import App Data", "ImportAppData", new { }, new { @class = "btn btn-secondary", @style = "width: 150px" })
+   @Html.ActionLink("Import Tests (CSV)", "ImportTests", new { }, new { @class = "btn btn-secondary", @style = "width: 150px" })
 </div>
 <br />
 <br />
+<hr />
 <br />
 <br />
 
@@ -71,7 +74,7 @@
         }
     </tbody>
 </table>
-<hr />
+<br />
 <br />
 <br />
 
